--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "m2s/laravel-nuxt",
+    "name": "klongchu/laravel-nuxt",
     "description": "NuxtJS framework integration for Laravel",
     "version": "1.2.0",
     "type": "library",
