--- a/composer.json
+++ b/composer.json
@@ -41,15 +41,14 @@
         "lint:staged": "grumphp run --ansi"
     },
     "require": {
-        "laravel/framework": "^10.0",
-        "illuminate/support": "^10.0"
+        "laravel/framework": "^10.0"
     },
     "require-dev": {
         "phpmd/phpmd": "^2.8",
-        "squizlabs/php_codesniffer": "^3.5",
-        "phpro/grumphp": "^0.18.0",
-        "friendsofphp/php-cs-fixer": "^2.16",
-        "pedrotroller/php-cs-custom-fixer": "^2.23"
+        "squizlabs/php_codesniffer": "^3.7",
+        "phpro/grumphp": "^2.0.0",
+        "friendsofphp/php-cs-fixer": "^3.28",
+        "pedrotroller/php-cs-custom-fixer": "^2.32"
     },
     "autoload": {
         "psr-4": {
